Update text on alerts page

--- a/corehq/apps/hqwebapp/templates/hqwebapp/maintenance_alerts.html
+++ b/corehq/apps/hqwebapp/templates/hqwebapp/maintenance_alerts.html
@@ -20,9 +20,9 @@
           {% blocktrans %}
             Enter alert text below and preview in the table below.
             Alerts will not be public until the "activate alert" button is
-            pressed. Links will be properly wrapped with anchor tags. Only one
-            alert will be shown at a time, and the most recently modified alert
-            will be displayed.
+            pressed. Links will be properly wrapped with anchor tags. Multiple
+            alerts may be shown at a time, and the most recently modified alert
+            will be displayed on top.
           {% endblocktrans %}
         </p>
         <form id="alertForm"
