feat: incorporate persistent case tile in print

--- a/corehq/apps/cloudcare/templates/cloudcare/formplayer_home.html
+++ b/corehq/apps/cloudcare/templates/cloudcare/formplayer_home.html
@@ -104,7 +104,7 @@
       <div id="breadcrumb-region" class="print-container"></div>
       <section id="cloudcare-notifications" class="container notifications-container"></section>
       <div class="container case-tile-container">
-        <div id="persistent-case-tile"></div>
+        <div id="persistent-case-tile" class="print-container"></div>
       </div>
       <div id="menu-region" class="container print-container"></div>
       <section id="webforms" data-bind="
