--- a/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/form.less
+++ b/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/form.less
@@ -138,9 +138,16 @@
     }
   }
 
-  .last, .last * {
+  .panel.panel-default.last,
+  .panel.panel-default.last *,
+  .q.form-group.last,
+  .q.form-group.last * {
     margin-bottom: 0px;
     padding-bottom: 0px;
+    .widget-container {
+      margin: 0px;
+      padding: 0px;
+    }
   }
 
   .help-block{
