--- a/corehq/apps/hqwebapp/templates/hqwebapp/partials/maintenance_alerts.html
+++ b/corehq/apps/hqwebapp/templates/hqwebapp/partials/maintenance_alerts.html
@@ -1,4 +1,7 @@
-{% for alert in maintenance_alerts %}
+{% load hq_shared_tags %}
+
+{% maintenance_alerts request as alerts %}
+{% for alert in alerts %}
   <div class="alert alert-warning alert-maintenance hide" data-id="{{ alert.id }}">
       <button class="close" data-dismiss="alert" aria-label="close">&times;</button>
       {{ alert.html }}
