second batch of addressing feedback

--- a/corehq/apps/data_interfaces/templates/data_interfaces/partials/auto_update_rule_list.html
+++ b/corehq/apps/data_interfaces/templates/data_interfaces/partials/auto_update_rule_list.html
@@ -104,7 +104,8 @@
         params="goToPage: goToPage,
                 perPage: itemsPerPage,
                 totalItems: totalItems,
-                onLoad: onPaginationLoad"></pagination>
+                onLoad: onPaginationLoad,
+                slug: 'update-rule-list'"></pagination>
     </div>
   </div>
 </div>
