--- a/corehq/apps/data_interfaces/templates/data_interfaces/auto_update_rules.html
+++ b/corehq/apps/data_interfaces/templates/data_interfaces/auto_update_rules.html
@@ -8,6 +8,23 @@
   {% initial_page_data 'rules' rules %}
 
   <div id="ko-auto-update-rules" class="ko-template">
+    <div class="row">
+      <div class="col-sm-8">
+        <p class="lead">
+          {% blocktrans %}
+            Automatically update or close cases from CommCare HQ
+          {% endblocktrans %}
+        </p>
+        <p>
+          {% blocktrans %}
+            Create rules for updating or closing cases from CommCare HQ.
+            All rules run every day at {{ time }} GMT.
+            For more information, see the <a href="https://confluence.dimagi.com/display/commcarepublic/Automatically+Close+Cases">Help Site</a>.
+          {% endblocktrans %}
+        </p>
+      </div>
+    </div>
+    <div class="spacer"></div>
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#tabs-update-rules">{% trans "Automatic Update Rules" %}</a></li>
     </ul>
