--- a/corehq/apps/data_interfaces/templates/data_interfaces/auto_update_rules.html
+++ b/corehq/apps/data_interfaces/templates/data_interfaces/auto_update_rules.html
@@ -6,8 +6,9 @@
 
 {% block page_content %}
   {% initial_page_data 'rules' rules %}
+  {% initial_page_data 'rule_runs' rule_runs %}
 
-  <div id="ko-auto-update-rules" class="ko-template">
+  <div id="ko-auto-update-rules">
     <div class="row">
       <div class="col-sm-8">
         <p class="lead">
@@ -27,11 +28,15 @@
     <div class="spacer"></div>
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#tabs-update-rules">{% trans "Automatic Update Rules" %}</a></li>
+      <li><a data-toggle="tab" href="#tabs-rule-run-history">{% trans "Update Rule Run History" %}</a></li>
     </ul>
 
     <div class="tab-content">
       <div class="tab-pane fade in active" id="tabs-update-rules">
         {% include 'data_interfaces/partials/auto_update_rule_list.html' %}
+      </div>
+      <div class="tab-pane" id="tabs-rule-run-history">
+        {% include 'data_interfaces/partials/update_rule_run_history.html' %}
       </div>
     </div>
   </div>
