--- a/corehq/apps/data_interfaces/templates/data_interfaces/partials/auto_update_rule_list.html
+++ b/corehq/apps/data_interfaces/templates/data_interfaces/partials/auto_update_rule_list.html
@@ -1,7 +1,7 @@
 {% load hq_shared_tags %}
 {% load i18n %}
 
-<div id="ko-tabs-update-rules">
+<div id="ko-tabs-update-rules" class="ko-template">
   <div class="spacer"></div>
   <a href="{% url "add_case_rule" domain %}">
     <button type="button" class="btn btn-primary" id="add-new">
