--- a/corehq/apps/settings/templates/settings/user_api_keys.html
+++ b/corehq/apps/settings/templates/settings/user_api_keys.html
@@ -14,6 +14,7 @@
     <td>
       <span class="label label-success" data-bind="visible: is_active">Active</span>
       <span class="label label-danger" data-bind="hidden: is_active">Inactive</span>
+      <small class="help-block" data-bind="hidden: is_active, text: deactivated_on" />
     </td>
     <td>
 
