Make table title sticky + add feature flag option to collect multiple lookup table sheets into one combined sheet.

--- a/corehq/apps/fixtures/templates/fixtures/manage_tables.html
+++ b/corehq/apps/fixtures/templates/fixtures/manage_tables.html
@@ -101,6 +101,10 @@
         </tr>
         </tbody>
       </table>
+      <!-- ko if: flagEnabled -->
+      <input type="checkbox" data-bind="checked: combineSheets" />
+      {% trans "Combine sheets" %}
+      <!-- /ko -->
     </div>
   </div>
   <div class="row">
