--- a/corehq/apps/cloudcare/templates/form_entry/templates.html
+++ b/corehq/apps/cloudcare/templates/form_entry/templates.html
@@ -121,33 +121,37 @@
           <div class="question-container">
             <div data-bind="template: { name: childTemplate, foreach: $data.children }"/>
           </div>
-          <div class="row" data-bind="visible: erroredQuestions().length > 0">
-            <div class="col-sm-12 alert alert-danger">
-              {% blocktrans %}
-                Please correct the answers below before submitting.
-                <br>
-                You can use the <strong><i class='fa fa-fast-forward'></i> Next Error</strong> button on the left-hand side of the screen to navigate between required fields.
-              {% endblocktrans %}
-              <ul data-bind="foreach: erroredQuestions">
-                  <li>
-                      <a href="#" data-bind="click: navigateTo, html: caption_markdown() || caption() || question_id() || gettext('Unknown Question')"></a>
-                      <span data-bind="visible: serverError, text: serverError"></span>
-                      <span data-bind="if: error">
-                        <!-- ko text: error --><!-- /ko -->
-                      </span>
-                      <span data-bind="visible: !serverError() && !error()">
-                        {% trans "An answer is required." %}
-                      </span>
-                  </li>
-              </ul>
+          {% if environment == "web-apps" %}
+            <div class="row" data-bind="visible: erroredQuestions().length > 0">
+              <div class="col-sm-12 alert alert-danger">
+                {% blocktrans %}
+                  Please correct the answers below before submitting.
+                  <br>
+                  You can use the <strong><i class='fa fa-fast-forward'></i> Next Error</strong> button on the left-hand side of the screen to navigate between required fields.
+                {% endblocktrans %}
+                <ul data-bind="foreach: erroredQuestions">
+                    <li>
+                        <a href="#" data-bind="click: navigateTo, html: caption_markdown() || caption() || question_id() || gettext('Unknown Question')"></a>
+                        <span data-bind="visible: serverError, text: serverError"></span>
+                        <span data-bind="if: error">
+                          <!-- ko text: error --><!-- /ko -->
+                        </span>
+                        <span data-bind="visible: !serverError() && !error()">
+                          {% trans "An answer is required." %}
+                        </span>
+                    </li>
+                </ul>
+              </div>
             </div>
-          </div>
+          {% endif %}
           <div id="submit-button" class="form-actions form-group noprint-sub-container" data-bind="visible: showSubmitButton">
             <div data-bind="css: submitClass">
               <button class="submit btn btn-primary"
                      type="submit"
                      data-bind="enable: enableSubmitButton">
-                <i class="fa fa-spin fa-refresh" data-bind="visible: !enableSubmitButton() && erroredQuestions.length != 0"></i>
+                <i class="fa fa-spin fa-refresh"
+                   data-bind="visible: !enableSubmitButton(){% if environment == "web-apps" %} && erroredQuestions.length != 0{% endif %}"
+                ></i>
                 <!-- ko text: submitText --><!-- /ko -->
               </button>
             </div>
