Django provides this handy helper for choice vals

--- a/corehq/motech/generic_inbound/templates/generic_inbound/request_log_detail.html
+++ b/corehq/motech/generic_inbound/templates/generic_inbound/request_log_detail.html
@@ -60,7 +60,7 @@
       <tbody>
         <tr>
           <th>status</th>
-          <td>{{ log.status }}</td>
+          <td>{{ log.get_status_display }}</td>
         </tr>
         <tr>
           <th>response_status</th>
