--- a/corehq/motech/generic_inbound/templates/generic_inbound/request_log_detail.html
+++ b/corehq/motech/generic_inbound/templates/generic_inbound/request_log_detail.html
@@ -75,7 +75,7 @@
         </tr>
         <tr>
           <th>error_message</th>
-          <td>{{ log.error_message }}</td>
+          <td><code>{{ log.error_message }}</code></td>
         </tr>
         <tr>
           <th>attempts</th>
@@ -109,8 +109,8 @@
           <td>{{ attempt.timestamp }}</td>
           <td>{{ attempt.is_retry }}</td>
           <td>{{ attempt.response_status }}</td>
-          <td>{{ attempt.response_body }}</td>
-          <td>{{ attempt.raw_response }}</td>
+          <td><code>{{ attempt.response_body }}</code></td>
+          <td><code>{{ attempt.raw_response }}</code></td>
           <td>{{ attempt.xform_id }}</td>
           <td>{{ attempt.case_ids }}</td>
         </tr>
