--- a/corehq/motech/generic_inbound/templates/generic_inbound/request_log_detail.html
+++ b/corehq/motech/generic_inbound/templates/generic_inbound/request_log_detail.html
@@ -4,6 +4,15 @@
 
 {% block page_content %}
 
+{% captureas status_css %}
+  {% case log.status 'success' %} success
+  {% case 'filtered' %} default
+  {% case 'reverted' %} warning
+  {% case 'error' 'validation-failed' %} danger
+  {% else %} default
+  {% endcase %}
+{% endcaptureas %}
+
 <h1>{{ current_page.title }}</h1>
 
 <div class="panel panel-default">
@@ -67,7 +76,11 @@
       <tbody>
         <tr>
           <th>status</th>
-          <td>{{ log.get_status_display }}</td>
+          <td>
+            <span class="label label-{{ status_css.strip }}">
+              {{ log.get_status_display }}
+            </span>
+          </td>
         </tr>
         <tr>
           <th>response_status</th>
