--- a/corehq/apps/app_manager/templates/app_manager/partials/releases/releases_table.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/releases/releases_table.html
@@ -1,11 +1,6 @@
 {% load hq_shared_tags %}
 {% load i18n %}
-
 <div id="releases-table" class="hide" data-bind="css: {hide: false}">
-  <div id="release-control" class="pull-right" data-bind="visible: true">
-    <button type="button" class="btn btn-xs btn-default">Release ON</button>
-    <button type="button" class="btn btn-xs  active btn-primary">Release OFF</button>
-  </div>
   <div class="alert alert-danger hide" data-bind="visible: brokenBuilds, css: {hide: false}">
     <p>
       <i class="fa fa-exclamation-circle"></i>
@@ -56,7 +51,7 @@
     {% endif %}
     <button class="btn btn-primary" data-bind="
             click: function() {
-              trackClick('Clicked Make New Version')
+              trackClick('Clicked Make New Version');
               return makeNewBuild();
             },
             attr: {disabled: !buildButtonEnabled() ? 'disabled' : undefined},
@@ -142,20 +137,22 @@
             <button type="button"
                     class="btn btn-xs"
                     data-bind="click: $root.toggleRelease,
+                                attr: {disabled: releaseLocked()},
                                            css: {
                                               'active': is_released(),
                                               'btn-primary': is_released(),
-                                              'btn-default': !is_released()
+                                              'btn-default': !is_released(),
                                            }">
               {% trans "Released" %}
             </button>
             <button type="button"
                     class="btn btn-xs btn-default"
                     data-bind="click: $root.toggleRelease,
+                                attr: {disabled: releaseLocked()},
                                            css: {
                                               'active': !is_released(),
                                               'btn-primary': !is_released(),
-                                              'btn-default': is_released()
+                                              'btn-default': is_released(),
                                            }">
               {% trans "In Test" %}
             </button>
