move p tag outside of blocktrans

--- a/corehq/apps/registration/templates/registration/partials/start_trial_modal.html
+++ b/corehq/apps/registration/templates/registration/partials/start_trial_modal.html
@@ -21,9 +21,9 @@
       <div id="choose-callback-options"
            class="fadeIn hidden">
         <div class="modal-body">
-          {% blocktrans %}
-            <p> A member of our team will call you soon to complete the setup of your CommCare trial account. </p>
-          {% endblocktrans %}
+          <p>
+            {% blocktrans %}A member of our team will call you soon to complete the setup of your CommCare trial account.{% endblocktrans %}
+          </p>
         </div>
         <div class="modal-footer">
           <a href="https://sites.dimagi.com/commcare-trial-callback">
