--- a/corehq/apps/registration/templates/registration/partials/start_trial_modal.html
+++ b/corehq/apps/registration/templates/registration/partials/start_trial_modal.html
@@ -28,7 +28,7 @@
         <div class="modal-footer">
           <a href="https://sites.dimagi.com/commcare-trial-callback">
             <button type="button btn-default"
-                    class="btn btn-default">Learn More</button>
+                    class="btn btn-default">{% trans "Learn More" %}</button>
           </a>
         </div>
       </div>
