--- a/corehq/apps/app_manager/templates/app_manager/app_view_release_manager.html
+++ b/corehq/apps/app_manager/templates/app_manager/app_view_release_manager.html
@@ -66,7 +66,7 @@
             <i class="fa fa-lock"></i>
           </button>
           <button id="btn-unlock-release" class="btn">
-            <i class="fa fa-lock-open"></i>
+            <i class="fa fa-unlock"></i>
           </button>
       </div>
     {% endif %}
