--- a/corehq/apps/users/templates/users/accept_invite.html
+++ b/corehq/apps/users/templates/users/accept_invite.html
@@ -33,7 +33,7 @@
                     </p>
                     <p>
                       {% blocktrans with user.username as username %}
-                        Are you sure you want to to accept the invitation
+                        Are you sure you want to accept the invitation
                         to join the CommCare HQ {{ invite_type }}
                         <strong>{{ invite_to }}</strong> as <strong>{{ username }}</strong>?
                       {% endblocktrans %}
