refactor to ensure 'update rule' is not used

--- a/corehq/apps/data_interfaces/templates/data_interfaces/auto_update_rules.html
+++ b/corehq/apps/data_interfaces/templates/data_interfaces/auto_update_rules.html
@@ -28,7 +28,7 @@
     <div class="spacer"></div>
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#tabs-update-rules">{% trans "Automatic Update Rules" %}</a></li>
-      <li><a data-toggle="tab" href="#tabs-rule-run-history">{% trans "Update Rule Run History" %}</a></li>
+      <li><a data-toggle="tab" href="#tabs-rule-run-history">{% trans "Rule Run History" %}</a></li>
     </ul>
 
     <div class="tab-content">
