configure sentry browser support in formplayer

--- a/corehq/apps/cloudcare/templates/formplayer/dependencies.html
+++ b/corehq/apps/cloudcare/templates/formplayer/dependencies.html
@@ -3,6 +3,11 @@
 
   <script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js' async></script>
   <link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' />
+  <script
+    src="https://browser.sentry-cdn.com/7.16.0/bundle.min.js"
+    integrity="sha384-70hBom53vQV6XVoqnEzSlfP8AYzEm6CSuti85YyRLtmm/jbx0GryCQ1z5StcQwsz"
+    crossorigin="anonymous"
+  ></script>
 {% compress js %}
   <script src="{% static 'backbone/backbone.js' %}"></script>
   <script src="{% static 'backbone.radio/build/backbone.radio.min.js' %}"></script>
