--- a/corehq/apps/cloudcare/templates/cloudcare/formplayer_home.html
+++ b/corehq/apps/cloudcare/templates/cloudcare/formplayer_home.html
@@ -84,6 +84,7 @@
   {% initial_page_data 'hmac_api_key' integrations.hmac_api_key %}
   {% initial_page_data 'hmac_hashed_secret' integrations.hmac_hashed_secret %}
   {% initial_page_data 'sentry_dsn' sentry.dsn %}
+  {% initial_page_data 'sentry_environment' sentry.environment %}
   {% initial_page_data 'sentry_release' sentry.release %}
   {% registerurl 'list_case_exports' request.domain %}
   {% registerurl 'list_form_exports' request.domain %}
