--- a/corehq/apps/app_manager/templates/app_manager/partials/modules/case_search_property.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/modules/case_search_property.html
@@ -72,8 +72,9 @@
                       <select class="form-control" data-bind="value: appearance">
                         <option value="">{% trans "Text" %}</option>
                         {% if request|toggle_enabled:'USH_CASE_CLAIM_UPDATES' %}
-                          {# limit to USH since datepicker is only available on web apps #}
+                          {# limit to USH since datepicker and checkbox are only available on web apps #}
                           <option value="date">{% trans "Date" %}</option>
+                          <option value="checkbox">{% trans "Checkbox" %}</option>
                         {% endif %}
                         <option value="daterange">{% trans "Date Range" %}</option>
                         <option value="barcode_scan">{% trans "Barcode" %}</option>
