add auto select checkbox to multi-select case list settings

--- a/corehq/apps/app_manager/templates/app_manager/partials/modules/case_list_multi_select.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/modules/case_list_multi_select.html
@@ -18,6 +18,12 @@
               {% trans "Enable multi-select case list" %}
             </label>
           </div>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" data-bind="checked: autoSelectEnabled, disable: !multiSelectEnabled()"/>
+              {% trans "Enable auto select" %}
+            </label>
+          </div>
         </div>
       </div>
     </div>
