--- a/corehq/apps/app_manager/templates/app_manager/partials/modules/case_list_multi_select.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/modules/case_list_multi_select.html
@@ -19,7 +19,7 @@
     </div>
     <div class="panel-body">
       <div class="row">
-        <div class="col-sm-8">
+        <div>
           <div class="checkbox">
             <label>
               <input type="checkbox" id="multi-select-checkbox" data-bind="checked: multiSelectEnabled" onchange="reconcileCheckboxes()"/>
@@ -32,7 +32,7 @@
               {% trans "Enable auto select" %}
             </label>
           </div>
-          <div class="form-group" data-bind="visible: multiSelectEnabled()">
+          <div data-bind="visible: multiSelectEnabled()">
             <label class="control-label {% css_label_class %}">
                 {% trans "Maximum selected value" %}
                 <span class="hq-help-template" data-title="{% trans 'Maximum Selected Value' %}"
