--- a/corehq/apps/fixtures/templates/fixtures/fixtures_base.html
+++ b/corehq/apps/fixtures/templates/fixtures/fixtures_base.html
@@ -2,7 +2,7 @@
 {% load hq_shared_tags %}
 {% load i18n %}
 
-{% block title %}{% trans report.title|default:"Project Reports" %}{% endblock %}\
+{% block title %}{% trans report.title|default:"Project Reports" %}{% endblock %}
 
 {% block page_breadcrumbs %}
   <ol id="hq-breadcrumbs" class="breadcrumb breadcrumb-hq-section">
