Swap icons for lock and unlock

--- a/corehq/apps/app_manager/templates/app_manager/app_view_release_manager.html
+++ b/corehq/apps/app_manager/templates/app_manager/app_view_release_manager.html
@@ -62,10 +62,10 @@
     {% if show_release_mode %}
       <div id="release-control" class="pull-right">
         Release Mode
-          <button id="btn-lock-release" class="btn">
+          <button id="btn-release-locked" class="btn">
             <i class="fa fa-lock"></i>
           </button>
-          <button id="btn-unlock-release" class="btn">
+          <button id="btn-release-unlocked" class="btn">
             <i class="fa fa-unlock"></i>
           </button>
       </div>
