--- a/corehq/apps/app_manager/templates/app_manager/partials/modules/case_search_property.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/modules/case_search_property.html
@@ -57,7 +57,7 @@
                     <p class="help-block" data-bind="visible: appearance() == 'daterange'">
                       {% trans 'In "YYYY-MM-DD to YYYY-MM-DD" format' %}
                     </p>
-                    <p class="help-block" data-bind="visible: appearanceFinal() == 'fixture' && isMultiselect()">
+                    <p class="help-block" data-bind="visible: (appearanceFinal() == 'fixture' || appearanceFinal() == 'checkbox') && isMultiselect()">
                       {% trans 'e.g. Use #,# as separator to select multiple values' %}
                     </p>
                   </div>
@@ -73,8 +73,10 @@
                         <option value="">{% trans "Text" %}</option>
                         {% if request|toggle_enabled:'USH_CASE_CLAIM_UPDATES' %}
                           {# limit to USH since datepicker and checkbox are only available on web apps #}
-                          <option value="date">{% trans "Date" %}</option>
+                          {% if js_options.has_lookup_tables %}
                           <option value="checkbox">{% trans "Checkbox" %}</option>
+                          {% endif %}
+                          <option value="date">{% trans "Date" %}</option>
                         {% endif %}
                         <option value="daterange">{% trans "Date Range" %}</option>
                         <option value="barcode_scan">{% trans "Barcode" %}</option>
@@ -90,7 +92,7 @@
                       </select>
                     </div>
                   </div>
-                  <div class="form-group" data-bind="visible: appearanceFinal() == 'fixture'">
+                  <div class="form-group" data-bind="visible: appearanceFinal() == 'fixture' || appearanceFinal() == 'checkbox'">
                       <label class="control-label col-xs-12 col-sm-3">
                           {% trans "Allow multiple selections" %}
                       </label>
@@ -111,7 +113,7 @@
                 {% endif %}
               </fieldset>
               {% if js_options.search_prompt_appearance_enabled %}
-              <fieldset data-bind="visible: appearanceFinal() == 'fixture'">
+              <fieldset data-bind="visible: appearanceFinal() == 'fixture' || appearanceFinal() == 'checkbox'">
                 <legend data-bind="text: dropdownLabels().optionsLabel"></legend>
                 <div class="form-group">
                   <label class="control-label col-xs-12 col-sm-3"
@@ -150,8 +152,8 @@
                     <fieldset>
                       <legend>{% trans "Advanced Options" %}</legend>
                       {% if js_options.has_geocoder_privs %}
-                        <div data-bind="visible: appearanceFinal() == 'fixture' || appearance() == ''">
-                          <div class="form-group" >
+                        <div data-bind="visible: ['', 'fixture', 'checkbox'].indexOf(appearanceFinal()) !== -1 ">
+                          <div class="form-group" data-bind="visible: appearanceFinal() !== 'checkbox'">
                             <label class="control-label col-xs-12 col-sm-3">
                               {% trans "Geocoder Receiver Expression" %}
                             </label>
@@ -215,7 +217,7 @@
                       {% endif %}
                     </fieldset>
                 {% endif %}
-                <fieldset data-bind="visible: appearanceFinal() == 'fixture'">
+                <fieldset data-bind="visible: appearanceFinal() == 'fixture' || appearanceFinal() == 'checkbox'">
                   <legend  data-bind="text: dropdownLabels().advancedLabel"></legend>
                   <div class="form-group">
                     <label class="control-label col-xs-12 col-sm-3">
