--- a/corehq/apps/cloudcare/templates/formplayer/query_view.html
+++ b/corehq/apps/cloudcare/templates/formplayer/query_view.html
@@ -72,12 +72,17 @@
            <% if (required) { %> aria-required="true"<% } %>>
 
     <% } else if (input === "checkbox") { %>
-    <input id="<%- text ? text : "" %>"
-           type="checkbox"
-           class="checkbox query-field"
-           value="<%- value %>"
-           <% if (value === 'checked') { %> checked <% } %>
-           <% if (required) { %> aria-required="true"<% } %>>
+    <fieldset multiple class="query-field" id="<%- text ? text : "" %>" <% if (required) { %> aria-required="true"<% } %>>
+      <legend class="sr-only"><%- text ? text : "" %></legend>
+      <% for (var i = 0; i < itemsetChoices.length; i++) { %>
+      <div id="<%- text ? text : "checkbox" %>-<%- i %>" class="checkbox">
+        <label>
+          <input type="checkbox" value="<%- i %>" <% if (value && value.indexOf(String(i)) !== -1) { %>checked<% } %>>
+          <%- itemsetChoices[i] %>
+        </label>
+      </div>
+      <% } %>
+    </fieldset>
 
     <% } else if (input == "address") { %>
     <div class="query-field" value="<%- value %>" id="<%- id %>_mapbox" data-address="<%- id %>">
