remove autoselect checkbox logic from the html

--- a/corehq/apps/app_manager/templates/app_manager/partials/modules/case_list_multi_select.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/modules/case_list_multi_select.html
@@ -3,14 +3,6 @@
 
 {% if request|toggle_enabled:"USH_CASE_LIST_MULTI_SELECT" %}
 
-	<script>
-		function reconcileCheckboxes() {
-			if (!document.getElementById("multi-select-checkbox").checked) {
-			  document.getElementById("auto-select-checkbox").checked = false;
-      }
-		}
-	</script>
-
   <div class="panel panel-appmanager" data-bind="with: shortScreen">
     <div class="panel-heading">
       <h4 class="panel-title panel-title-nolink">
@@ -22,7 +14,7 @@
         <div>
           <div class="checkbox">
             <label>
-              <input type="checkbox" id="multi-select-checkbox" data-bind="checked: multiSelectEnabled" onchange="reconcileCheckboxes()"/>
+              <input type="checkbox" data-bind="checked: multiSelectEnabled"/>
               {% trans "Enable multi-select case list" %}
             </label>
           </div>
