Handle POST return data more consistently

--- a/corehq/apps/settings/templates/settings/user_api_keys.html
+++ b/corehq/apps/settings/templates/settings/user_api_keys.html
@@ -76,7 +76,9 @@
     <td data-bind="text: domain"></td>
     <td data-bind="text: ip_allowlist"></td>
     <td data-bind="text: created"></td>
-    <td data-bind="text: is_active"></td>
+    <td>
+      <span class="label label-success">{% trans "Active" %}</span>
+    </td>
     <td></td>
   </script>
 {% endblock %}
