Switch JS to override top-level model
This is a bit more straightforward of an implementation

--- a/corehq/apps/settings/templates/settings/user_api_keys.html
+++ b/corehq/apps/settings/templates/settings/user_api_keys.html
@@ -18,10 +18,10 @@
     </td>
     <td>
 
-      <button class="btn btn-default" data-action="deactivate" data-bind="visible: is_active">
+      <button class="btn btn-default" data-bind="visible: is_active, click: $root.deactivate">
         <i class="fa fa-pause"></i> {% trans "Deactivate" %}
       </button>
-      <button class="btn btn-default" data-action="activate" data-bind="hidden: is_active">
+      <button class="btn btn-default" data-bind="hidden: is_active, click: $root.activate">
         <i class="fa fa-toggle-right"></i> {% trans "Activate" %}
       </button>
 
